// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constructGroups should build filter with empty badge 1`] = `
Array [
  <div
    className="ins-c-tagfilter__option-value"
  >
    someKey=someValue
  </div>,
  <span
    className="pf-c-badge pf-m-read"
  >
    0
  </span>,
]
`;

exports[`constructGroups should render correctly 1`] = `
Array [
  <div
    className="ins-c-tagfilter__option-value"
  >
    someKey=someValue
  </div>,
  <span
    className="pf-c-badge pf-m-unread"
  >
    1
  </span>,
]
`;
